update project version